---------------------------------------------------------------------------
Version 5.9.0  [V5-DEVEL] (rgerhards), 2011-03-??
- bugfix: do not open files with full privileges, if privs will be dropped
  This make the privilege drop code more bulletproof, but breaks Ubuntu's
  work-around for log files created by external programs with the wrong
  user and/or group. Note that it was long said that this "functionality"
  would break once we go for serious privilege drop code, so hopefully
  nobody still depends on it (and, if so, they lost...).
- bugfix: pipes not opened in full priv mode when privs are to be dropped
- this begins a new devel branch for v5
- better handling of queue i/o errors in disk queues. This is kind of a
  bugfix, but a very intrusive one, this it goes into the devel version
  first. Right now, "file not found" is handled and leads to the new
  emergency mode, in which disk action is stopped and the queue run
  in direct mode. An error message is emited if this happens.
- added support for user-level PRI provided via systemd
- added new config directive $InputTCPFlowControl to select if tcp
  received messages shall be flagged as light delayable or not.
- enhanced omhdfs to support batching mode. This permits to increase
  performance, as we now call the HDFS API with much larger message
  sizes and far more infrequently
- bugfix: failover did not work correctly if repeated msg reduction was on
  affected directive was: $ActionExecOnlyWhenPreviousIsSuspended on
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=236
---------------------------------------------------------------------------
Version 5.8.1  [V5-stable] (rgerhards), 2011-04-??
- bugfix: rate-limiting inside imuxsock did not work 100% correct
  reason was that a global config variable was invalidly accessed where a
  listener variable should have been used.
  Also performance-improved the case when rate limiting is turned off (this